[gd_scene load_steps=2 format=3 uid="uid://dgs04lod8nj65"]

[ext_resource type="Script" uid="uid://0jfo182q3an5" path="res://scenes/components/move_to_target_component.gd" id="1_1uhwc"]

[node name="MoveToTargetComponent" type="Node"]
script = ExtResource("1_1uhwc")

[node name="SoundDelayTimer" type="Timer" parent="."]

[connection signal="timeout" from="SoundDelayTimer" to="." method="_on_sound_delay_timer_timeout"]
